# beauty-manager-pro

./: .gitignore  CLAUDE.md  README.md  generate_manual.py  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250122_001_initial_schema.sql  20250124_002_auth_system.sql  20250125_003_license_system.sql  20250126_004_inventario.sql  20250127_005_comunicazioni_system.sql  20250128_006_whatsapp_email_templates.sql  20250129_007_fix_template_emoji.sql  20250130_008_add_palette_id.sql  20250131_009_performance_indexes.sql  20250201_010_omaggio_and_pacchetti.sql  20250202_011_pacchetto_sedute_pagamento.sql  20250203_012_pacchetto_sedute_data_prevista.sql  20250204_013_pacchetto_cliente_tipo_pagamento.sql  20250205_014_pacchetto_pagamenti.sql  20250206_015_orari_centro.sql
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  scheduler.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/commands/: analytics.rs  appuntamenti.rs  auth.rs  azienda.rs  backup.rs  changelog.rs  clienti.rs  config.rs  dashboard.rs  export.rs  insights.rs  license.rs  magazzino.rs  messaggistica.rs  mod.rs  operatrici.rs  pacchetti.rs  trattamenti.rs
src-tauri/src/db/: connection.rs
src-tauri/src/licensing/: mod.rs
src-tauri/src/models/: analytics.rs  appuntamento.rs  azienda.rs  cliente.rs  comunicazione.rs  export.rs  license.rs  magazzino.rs  mod.rs  operatrice.rs  prodotto.rs  trattamento.rs  user.rs
src-tauri/src/services/: export.rs  mod.rs
(+110 files in other folders)
