[package]
name = "beauty-manager-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beauty_manager_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
fs_extra = "1.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rand = "0.8"
hex = "0.4"
bcrypt = "0.15"
rust_xlsxwriter = "0.78"
printpdf = "0.7"
ed25519-dalek = "2.1"
sha2 = "0.10"
hostname = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "builder", "smtp-transport"] }
urlencoding = "2.1"
open = "5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

